2012-01-30  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (compile): An optimization - which also fixes
	a possible VerifyError.

2012-01-29  Per Bothner  <per@bothner.com>

	* ModuleExp.java: Dynamically check if compiler is available,
	so Android users can use eval more easily.
	(compilerAvailable): Deprecate old field.
	(compilerAvailable): New method.
	(alwaysCompile): Update to call new compilerAvailable method.
	* Compilation.java: Likewise.

	* LambdaExp.java (getReturnType): Don't call getType on body if it
	hasn't been VALIDATED yet - that could cause problems.

2012-01-21  Per Bothner  <per@bothner.com>

	* Declaration.java (ABSTRACT_ACCESS): New flag.
	(CLASS_ACCESS_FLAGS): Include ABSTACT_ACCESS.

	* StackTarget.java (forceLazyIfNeeded): Don't force if stack type
	is actually a subtype of target type.

2012-01-15  Per Bothner  <per@bothner.com>

	* StackTarget.java (compileFromStack): Various fixes.

2012-01-01  Per Bothner  <per@bothner.com>

	* Language.java (getLangTypeFor): Check for lazy[TYPE].
	* StackTarget.java (forceLazyIfNeeded): New static method.
	(compileFromStack0): Coerce, if needed, from non-lazy to lazy.
	(getClonedInstance, doCoerce): New protected methods.
	(compileFromStack0): Do forceLazyIfNeeded.
	(compileFromStack): Use doCoerce.
	Handle coercion from non-lazy to lazy.
	* CheckedTarget.java (emitCheckedCoerce): Do forceLazyIfNeeded.
	(getClonedInstance, doCoerce): New methods.
	(compileFromStack): Remove - use inherited version.
	* Compilation.java (compileConstant): Check for LazyType.
	(generateMatchMethods): Do forceLazyIfNeeded.

2011-12-12  Per Bothner  <per@bothner.com>

	* LambdaExp.java (compile): Don't optimize ProcInitializer handling
	if mainClass differers from moduleClass

	* InlineCalls.java (checkType): Tweak previous change to handle
	interfaces and SAM-conversion better.

2011-12-10  Per Bothner  <per@bothner.com>

	* Language.java (PARSE_INTERACTIVE_MODULE): New flag.